<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- input_dialog Data -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/inputArriveCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USD"
            android:textColor="#000"
            android:textSize="18dp"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/inputArriveValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:hint="@string/dialog_input_hint_price"
            android:inputType="numberDecimal"
            android:textColor="#fff"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/inputDepartValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="18dp"
            android:textColor="#fff"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/inputArriveValue"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/inputDepartCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KRW"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_toLeftOf="@id/inputDepartValue"
            android:layout_alignBaseline="@id/inputDepartValue"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnAccommodation"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_hotel"/>

        <Button
            android:id="@+id/btnFood"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_restaurant"/>

        <Button
            android:id="@+id/btnTransportation"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_train"/>

        <Button
            android:id="@+id/btnShopping"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_shopping_cart"/>

        <Button
            android:id="@+id/btnSightseeing"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_map"/>

        <Button
            android:id="@+id/btnEtc"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/selector_more_horiz"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/dialog_memo"
            android:textColor="#000"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/editMemo"
            android:layout_marginLeft="50dp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/dialog_hint_memo"
            android:gravity="top"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnInputConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/dialog_confirm"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <Button
                android:id="@+id/btnEditConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/dialog_edit"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/btnDeleteConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/dialog_delete"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
