<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/ic_flight_takeoff"/>

                <!-- Setting Depart -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depart"
                        android:textColor="#fff"
                        android:textSize="15dp"/>

                    <Spinner
                        android:id="@+id/setDepartCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"
                        android:entries="@array/countries_currency"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="250dp"
                android:layout_height="0.65dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="15dp"
                    android:src="@drawable/ic_flight_land"/>

                <!-- Setting Dest -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrive"
                        android:textColor="#fff"
                        android:textSize="15dp"/>

                    <Spinner
                        android:id="@+id/setArriveCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textSize="15dp"
                        android:textColor="#fff"
                        android:entries="@array/countries_currency"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/txtArriveCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="USD"
            android:textColor="#000"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/editTotalExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:hint="@string/setting_hint_expense"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDepartCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KRW"
                android:textColor="#000"
                android:textSize="15dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/txtTransExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#8a8a8a"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="right">

        <Button
            android:id="@+id/btnSettingInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_btn_init"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btnSettingConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

</LinearLayout>
